--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@elevenlabs/elevenlabs-js": "^2.24.1",
     "@elevenlabs/react": "^0.11.0",
+    "@prisma/client": "^7.0.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -71,8 +72,7 @@
     "three": "^0.181.1",
     "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2",
-    "zod": "^4.1.12",
-    "@prisma/client": "^6.2.0"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -81,10 +81,10 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "prisma": "^6.19.0",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5",
-    "prisma": "^6.2.0",
-    "tsx": "^4.19.0"
+    "typescript": "^5"
   }
 }
